added more helper methods